# serializer version: 1
# name: test_displayed_error
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Login to Yak-Shears
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
   </head>
   <body class="layout">
    <header class="header">
     <div class="container">
      <div class="header__bar">
       <a class="brand" href="/files">
        <div class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <nav>
        <ul class="nav__list">
         <li>
          <a class="nav__link" href="/files">
           Notes
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner">
     <div class="container">
      <h1>
       Login
      </h1>
      <form action="/auth/login" class="form" method="post">
       <input name="redirect" type="hidden" value="/files"/>
       <div class="form__group">
        <label class="form__label" for="email">
         Email
        </label>
        <input class="form__control" id="email" name="email" required="" type="email"/>
       </div>
       <div class="form__group">
        <label class="form__label" for="password">
         Password
        </label>
        <input class="form__control" id="password" name="password" required="" type="password"/>
       </div>
       <div class="alert alert--warn">
        <strong>
         Error:
        </strong>
        Invalid email or password
       </div>
       <button class="button button--primary" type="submit">
        Login
       </button>
      </form>
      <p class="text-center text-sm">
       Note: Users must be created by an administrator using the CLI tool.
      </p>
     </div>
    </main>
   </body>
  </html>
  
  '''
# ---
# name: test_login_get_shows_form
  '''
  <!DOCTYPE html>
  <html lang="en">
   <head>
    <meta charset="utf-8"/>
    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
    <title>
     Login to Yak-Shears
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
   </head>
   <body class="layout">
    <header class="header">
     <div class="container">
      <div class="header__bar">
       <a class="brand" href="/files">
        <div class="brand__logo">
         YS
        </div>
        <span>
         Yak Shears
        </span>
       </a>
       <nav>
        <ul class="nav__list">
         <li>
          <a class="nav__link" href="/files">
           Notes
          </a>
         </li>
        </ul>
       </nav>
      </div>
     </div>
    </header>
    <main class="layout__inner">
     <div class="container">
      <h1>
       Login
      </h1>
      <form action="/auth/login" class="form" method="post">
       <div class="form__group">
        <label class="form__label" for="email">
         Email
        </label>
        <input class="form__control" id="email" name="email" required="" type="email"/>
       </div>
       <div class="form__group">
        <label class="form__label" for="password">
         Password
        </label>
        <input class="form__control" id="password" name="password" required="" type="password"/>
       </div>
       <button class="button button--primary" type="submit">
        Login
       </button>
      </form>
      <p class="text-center text-sm">
       Note: Users must be created by an administrator using the CLI tool.
      </p>
     </div>
    </main>
   </body>
  </html>
  
  '''
# ---